# egt_comparison

./: CMakeLists.txt  README.txt
scripts/: bookworm-2024-08-hpcc.def  build_bdd  chesspressoize  clstize  d1merge  di  dtrize  dump_environment_variables  dump_syzygy  dump_variables.cmake  iclize  osm  prepare_repository_build_area  prepare_repository_build_areas  reduce  sample_uniformly_from_figurine_count  sample_uniformly_from_material_signature  set_required_environment_variables  stage_01_dump_syzygy_K_vs_k  stage_02_dump_syzygy_Kx_vs_k  stage_03a_dump_syzygy_Kx_vs_kx  stage_03b_dump_syzygy_Kxx_vs_k  stage_04a_dump_syzygy_Kxx_vs_kx_pawnful  stage_04b_dump_syzygy_Kxx_vs_kx_pawnless  stage_04c_dump_syzygy_Kxxx_vs_k  stage_06_do_not_sample_K_vs_k  stage_07_sample_Kx_vs_k  stage_08a_sample_Kx_vs_kx  stage_08b_sample_Kxx_vs_k  stage_09a_sample_Kxx_vs_kx_pawnful  stage_09b_sample_Kxx_vs_kx_pawnless  stage_09c_sample_Kxxx_vs_k  stage_11_chesspressoize_K_vs_k  stage_12_chesspressoize_Kx_vs_k  stage_13a_chesspressoize_Kx_vs_kx  stage_13b_chesspressoize_Kxx_vs_k  stage_14a_chesspressoize_Kxx_vs_kx_pawnful  stage_14b_chesspressoize_Kxx_vs_kx_pawnless  stage_14c_chesspressoize_Kxxx_vs_k  stage_16_clstize_K_vs_k  (+84 more)
source/: CMakeLists.txt  argument_parsing.cpp  argument_parsing.hpp  assert_fail.cpp  assert_fail.hpp  atomic_stuff.cpp  atomic_stuff.hpp  atomic_stuff_test.cpp  atomic_stuff_test.hpp  bdd_endgame_table_parameterized_testing_type.cpp  bdd_endgame_table_parameterized_testing_type.hpp  bdd_endgame_table_type.cpp  bdd_endgame_table_type.hpp  bdd_endgame_table_type_test.cpp  bdd_endgame_table_type_test.hpp  binarize_F_main.cpp  binary_stream_io.cpp  binary_stream_io.hpp  bit_array_display.cpp  bit_array_display.hpp  bit_array_display_test.cpp  bit_array_display_test.hpp  bit_indexing_and_sizing.cpp  bit_indexing_and_sizing.hpp  bit_region_schema_type.cpp  bit_region_schema_type.hpp  bit_region_schema_type_test.cpp  bit_region_schema_type_test.hpp  bit_region_type.cpp  bit_region_type.hpp  bit_region_type_test.cpp  bit_region_type_test.hpp  bit_region_uint_operators.cpp  bit_region_uint_operators.hpp  bit_region_uint_operators_test.cpp  bit_region_uint_operators_test.hpp  bit_stuff.cpp  bit_stuff.hpp  bit_stuff_test.cpp  bit_stuff_test.hpp  (+282 more)
source/bdd_from_bits/: CMakeLists.txt  bdd_forest_type.cpp  bdd_forest_type.hpp  bdd_node_type.cpp  bdd_node_type.hpp  bdd_operation_type.cpp  bdd_operation_type.hpp  bin_parser_type.cpp  bin_parser_type.hpp  build_bdd.cpp  build_bdd.hpp  build_bdd_main.cpp  build_bdd_main.hpp  command_line_argument_processing.cpp  command_line_argument_processing.hpp  common_operation_type.cpp  common_operation_type.hpp  compare_operation_type.cpp  compare_operation_type.hpp  compute_table_type.cpp  compute_table_type.hpp  exception_neutrality.cpp  exception_neutrality.hpp  file_reader_type.cpp  file_reader_type.hpp  fixed_decision_diagram_type.cpp  fixed_decision_diagram_type.hpp  fixed_decision_diagram_type_test.cpp  fixed_decision_diagram_type_test.hpp  has_common_operation_type.cpp  has_common_operation_type.hpp  minterm_buffer_type.cpp  minterm_buffer_type.hpp  one_sided_matching_operation_type.cpp  one_sided_matching_operation_type.hpp  one_sided_matching_resolver_type.cpp  one_sided_matching_resolver_type.hpp  parser_type.cpp  parser_type.hpp  pla_parser_type.cpp  (+19 more)
source/epd/: CMakeLists.txt  board_contents_type.cpp  board_contents_type.hpp  board_contents_type_test.cpp  board_contents_type_test.hpp  castling_rights_type.cpp  castling_rights_type.hpp  castling_rights_type_test.cpp  castling_rights_type_test.hpp  en_passant_target_type.cpp  en_passant_target_type.hpp  en_passant_target_type_test.cpp  en_passant_target_type_test.hpp  extended_position_description_type.cpp  extended_position_description_type.hpp  extended_position_description_type_test.cpp  extended_position_description_type_test.hpp  opcode_type.cpp  opcode_type.hpp  opcode_type_test.cpp  opcode_type_test.hpp  operand_type.cpp  operand_type.hpp  operand_type_test.cpp  operand_type_test.hpp  operands_type.cpp  operands_type.hpp  operation_type.cpp  operation_type.hpp  operation_type_test.cpp  operation_type_test.hpp  operations_type.cpp  operations_type.hpp  operations_type_test.cpp  operations_type_test.hpp  side_to_move_type.cpp  side_to_move_type.hpp  side_to_move_type_test.cpp  side_to_move_type_test.hpp
source/operators/uint/: CMakeLists.txt  bit_region_uint_operator_type.cpp  bit_region_uint_operator_type.hpp  set_lhs_bits_are_subset_of_set_rhs_bits_type.cpp  set_lhs_bits_are_subset_of_set_rhs_bits_type.hpp  set_lhs_bits_are_subset_of_set_rhs_bits_type_test.cpp  set_lhs_bits_are_subset_of_set_rhs_bits_type_test.hpp
source/representation/: CMakeLists.txt  bitboard_type.cpp  bitboard_type.hpp  bitboard_type_test.cpp  bitboard_type_test.hpp  bitboards_type.cpp  bitboards_type.hpp  board_8x8_type.cpp  board_8x8_type.hpp  board_8x8_type_test.cpp  board_8x8_type_test.hpp  canonicalization_enum.cpp  canonicalization_enum.hpp  coordinate_enum.cpp  coordinate_enum.hpp  coordinate_enum_test.cpp  coordinate_enum_test.hpp  coordinate_type.cpp  coordinate_type.hpp  coordinate_type_test.cpp  coordinate_type_test.hpp  coordinates_type.cpp  coordinates_type.hpp  coordinates_type_test.cpp  coordinates_type_test.hpp  cover_enum.cpp  cover_enum.hpp  cover_type.cpp  cover_type.hpp  cover_type_test.cpp  cover_type_test.hpp  cube_schema_type.cpp  cube_schema_type.hpp  cube_type.cpp  cube_type.hpp  cube_type_test.cpp  cube_type_test.hpp  egt_position_type.cpp  egt_position_type.hpp  egt_position_type_test.cpp  (+66 more)
toolchains/: Toolchain.clang++-git-linux.cmake  Toolchain.g++-git-linux.cmake
